# VaultGemma

./: .gitignore  INSTALLATION.md  README.md  generate_better_responses.py  generate_responses.py  generated_responses.txt  pyproject.toml  requirements.txt  run_evaluations.py  run_example.py  run_test.py  setup.py
config/: default.yaml
evals/: EVALUATION_SUMMARY.md  README.md  __init__.py  base_evaluator.py  business_evaluator.py  entity_evaluator.py  evaluation_runner.py  intent_evaluator.py  requirements.txt  run_example.py  sentiment_evaluator.py
examples/advanced/: batch_processing.py  chat_example.py  interactive_chat.py
examples/huggingface/: basic_usage.py  quick_start.py
examples/kaggle/: authentication_setup.py  kaggle_usage.py
requirements/: core.txt  dev.txt  optional.txt  providers.txt
src/vaultgemma/: __init__.py  cli.py
src/vaultgemma/auth/: __init__.py  huggingface_auth.py  kaggle_auth.py
src/vaultgemma/config/: __init__.py  settings.py
src/vaultgemma/core/: __init__.py  base.py  exceptions.py  model_manager.py  text_generator.py
src/vaultgemma/providers/: __init__.py  huggingface_provider.py  kaggle_provider.py
starter/: hello_world.py  quick_start.py
tests/: __init__.py  test_config.py  test_exceptions.py
