[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultgemma"
version = "1.0.0"
description = "A Python library for running Google's VaultGemma models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VaultGemma Team"},
]
keywords = ["ai", "machine-learning", "language-model", "vaultgemma", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "transformers>=4.56.1",
    "huggingface-hub>=0.34.0",
    "tokenizers>=0.22.0",
    "accelerate>=1.0.0",
    "sentencepiece>=0.2.1",
    "blobfile>=3.1.0",
]

[project.optional-dependencies]
# Provider-specific dependencies
kaggle = [
    "kagglehub>=0.3.13",
    "kaggle>=1.5.16",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
# CLI enhancements
cli = [
    "huggingface_hub[cli]>=0.34.0",
]
# Jupyter notebook support
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
# Performance monitoring
monitoring = [
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]
# All optional dependencies
all = [
    "kagglehub>=0.3.13",
    "kaggle>=1.5.16",
    "huggingface_hub[cli]>=0.34.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]

[project.scripts]
vaultgemma = "vaultgemma.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/VaultGemma"
Repository = "https://github.com/your-username/VaultGemma"
Issues = "https://github.com/your-username/VaultGemma/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
